@@ -17,6 +17,8 @@ Revision history for DBIx::Class
         - Make the Optional::Dependencies error messages cpanm-friendly
         - Incompatibly change values (not keys) of the hash returned by
           Optional::Dependencies::req_group_list (no known users in the wild)
+        - Config::Any is no longer a core dep, but instead is migrated to a new
+          optdep group 'config_file_reader'
 
 0.082820 2015-03-20 20:35 (UTC)
     * Fixes
